# milvus-sdk-rust

./: .gitignore  .gitmodules  Cargo.toml  scratchpad.txt
examples/: collection.rs
src/: client.rs  collection.rs  data.rs  schema.rs  value.rs
src/proto/: milvus.proto.common.rs  milvus.proto.milvus.rs  milvus.proto.schema.rs
tests/: collection.rs
