[package]
name = "milvus-sdk-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "milvus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = {version = "0.9.1", features = ["tls", "tls-roots"]}
prost = "0.11.8"
tokio = { version = "1.27.0", features = ["full"] }
thiserror = "1.0.40"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
anyhow = "1.0.70"
strum = "0.24.1"
strum_macros = "0.24.3"
base64 = "0.21.0"

[build-dependencies]
tonic-build = "0.9.1"

[dev-dependencies]
rand = "0.8.5"
